added required dependencies in order to create JUnit 5 tests and measure test coverage